--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite dev --port 3000",
-    "build": "bun --bun vite build", 
-    "start": "bun run .output/server/index.mjs",
+    "build": "vite build", 
     "serve": "vite preview",
     "test": "vitest run",
     "format": "biome format",
