--- a/components.json
+++ b/components.json
@@ -21,6 +21,7 @@
   "registries": {
     "@coss": "https://coss.com/ui/r/{name}.json",
     "@aceternity": "https://ui.aceternity.com/registry/{name}.json",
-    "@wds": "https://wds-shadcn-registry.netlify.app/r/{name}.json"
+    "@wds": "https://wds-shadcn-registry.netlify.app/r/{name}.json",
+    "@hextaui": "https://hextaui.com/r/{name}.json"
   }
 }
