--- a/components.json
+++ b/components.json
@@ -22,6 +22,7 @@
     "@coss": "https://coss.com/ui/r/{name}.json",
     "@aceternity": "https://ui.aceternity.com/registry/{name}.json",
     "@wds": "https://wds-shadcn-registry.netlify.app/r/{name}.json",
-    "@hextaui": "https://hextaui.com/r/{name}.json"
+    "@hextaui": "https://hextaui.com/r/{name}.json",
+    "@basecn": "https://basecn.dev/r/{name}.json"
   }
 }
