--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "check": "biome check"
   },
   "dependencies": {
-    "@base-ui-components/react": "^1.0.0-beta.7",
+    "@base-ui-components/react": "^1.0.0-rc.0",
     "@faker-js/faker": "^10.0.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slider": "^1.3.6",
@@ -49,7 +50,7 @@
     "cmdk": "^1.1.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.544.0",
-    "motion": "^12.23.24",
+    "motion": "^12.23.25",
     "nitro": "latest",
     "radix-ui": "^1.4.3",
     "react": "^19.2.0",
