chore: fixed package.json config issue

--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite dev --port 3000",
-    "build": "vite build",
-    "preview": "vite preview",
+    "build": "bun --bun vite build",
+    "start": "bun run .output/server/index.mjs",
+    "serve": "vite preview",
     "test": "vitest run",
-    "lint": "eslint",
-    "format": "prettier",
-    "check": "prettier --write . && eslint --fix"
+    "format": "biome format",
+    "lint": "biome lint",
+    "check": "biome check"
   },
   "dependencies": {
     "@base-ui/react": "^1.0.0",
