--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fontsource-variable/tasa-orbiter": "^5.2.2",
     "@hugeicons/core-free-icons": "^2.0.0",
     "@hugeicons/react": "^1.1.1",
+    "@radix-ui/react-progress": "^1.1.8",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-devtools": "^0.7.0",
     "@tanstack/react-form": "^1.27.3",
