--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fontsource-variable/figtree": "^5.2.10",
     "@fontsource-variable/inter": "^5.2.8",
     "@fontsource-variable/plus-jakarta-sans": "^5.2.8",
+    "@fontsource-variable/public-sans": "^5.2.7",
     "@fontsource-variable/tasa-orbiter": "^5.2.2",
     "@fontsource/englebert": "^5.2.10",
     "@hookform/resolvers": "^5.2.2",
@@ -35,6 +36,7 @@
     "@tanstack/react-start": "^1.132.0",
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/router-plugin": "^1.132.0",
+    "@toolwind/corner-shape": "^0.0.8-3",
     "better-auth": "^1.4.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
