refactor(dashboard): restructure client dashboard with modular components
- Extract recommended lawyers section into separate RecommendedLawyers component
- Extract active cases section into separate ActiveCases component
- Extract notifications section into separate Notifications component
- Extract schedule calendar section into separate ScheduleCalendar component
- Extract meetings section into separate Meetings component
- Create client components index file for cleaner imports
- Create dashboard components index file for organized exports
- Update ClientDashboard to compose modular components instead of inline markup
- Add environment configuration template with API URL and NIN verification settings
- Update VSCode settings to disable Kiro MCP configuration
- Improve component organization and maintainability by separating concerns

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,5 +32,6 @@
   "editor.codeActionsOnSave": {
     "source.organizeImports.biome": "explicit"
   },
-  "typescript.autoClosingTags": false
+  "typescript.autoClosingTags": false,
+  "kiroAgent.configureMCP": "Disabled"
 }
